UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Awarded_Quantity__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Internal_Description__c</fullName>
        <label>Contract Internal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response Line</label>
        <referenceTo>Phoenix_Customer_Response_Line__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the GCP Product Family</description>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Position__c</fullName>
        <label>Awarded Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Awarded_Quantity__c</fullName>
        <label>Awarded Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response</label>
        <referenceTo>Phoenix_Customer_Response__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Phoenix_Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Internal_Contract_Description__c</fullName>
        <label>Internal Contract Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Legacy_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Code__c</fullName>
        <label>Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Awarded Quantity</relationshipLabel>
        <relationshipName>Awarded_Quantity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Supply_Effective_Date__c</fullName>
        <description>This info fetching from Customer Response line</description>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Phoenix_Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <label>Awarded Quantity</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Contract__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Bid__c</columns>
        <columns>Phoenix_Awarded_Quantity__c</columns>
        <columns>Phoenix_Awarded_Position__c</columns>
        <columns>Phoenix_Customer_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Awarded Quantity-{0000000}</displayFormat>
        <label>Awarded Quantity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Awarded Quantity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>